@@ -1,3 +1,8 @@
+2015-04-05  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* write.c (compress_debug): Don't write the zlib header if
+	compressed section size is the same as before compression.
+
 2015-04-02  Nick Clifton  <nickc@redhat.com>
 
 	PR gas/18189
